# particle-sim

./: .gitignore  MANIFEST.in  README.rst  main.html  setup.cfg
particlesim/: demo.html  main.html
particlesim/static/particlesim/: base.css  base.js  loadWorld.js
