[metadata]
name = particle-sim
version = 0.1
description = A JavaScript-based particle simulator packaged as a Django app for ease of use
long_description = file: README.rst
url = https://github.com/nickwulf/particle-sim
author = Nicholas Wulf
author_email = nickwulf1@gmail.com
license = Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
